--- a/Lab2/lab2.ipynb
+++ b/Lab2/lab2.ipynb
@@ -11,9 +11,7 @@
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import LabelEncoder as LE\n",
-    "\n",
-    "# from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import LabelEncoder as LE"
    ]
   },
   {
@@ -43,24 +41,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Считываем набор данных и задаем название столбцов"
+    "## Считываем набор данных и задаем название столбцов"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\n",
-    "       'agaricus-lepiota.data',\n",
-    "       names=['class', 'cap-shape', 'cap-surface', 'cap-color',\n",
-    "                        'bruises', 'odor', 'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
-    "                        'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 'stalk-surface-below-ring',\n",
-    "                        'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color',\n",
-    "                        'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat'],\n",
-    "                 header=None)\n",
-    "# df['class'].unique()"
+    "    'agaricus-lepiota.data',\n",
+    "    names=['class', 'cap-shape', 'cap-surface', 'cap-color',\n",
+    "           'bruises', 'odor', 'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
+    "           'stalk-shape', 'stalk-root', 'stalk-surface-above-ring', 'stalk-surface-below-ring',\n",
+    "           'stalk-color-above-ring', 'stalk-color-below-ring', 'veil-type', 'veil-color',\n",
+    "           'ring-number', 'ring-type', 'spore-print-color', 'population', 'habitat'],\n",
+    "    header=None)"
    ]
   },
   {
@@ -72,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +83,7 @@
     "\n",
     "    def fit(self, X, y):\n",
     "        n = len(X)\n",
-    "        grouped = dict() # группируем данные для удобства\n",
+    "        grouped = dict()  # группируем данные для удобства\n",
     "        for c in self.classes:\n",
     "            grouped[c] = X[np.where(y == c)]\n",
     "\n",
@@ -98,7 +95,6 @@
     "        return self\n",
     "\n",
     "    def predict(self, X):  # предсказывает по набору входных данных метки класса\n",
-    "        # print(self.feat_counts[self.classes[0]])\n",
     "        result = []\n",
     "        for row_idx in range(X.shape[0]):\n",
     "            class_scores = {c: self.class_priors[c] for c in\n",
@@ -108,7 +104,7 @@
     "                    if X[row_idx][column_idx] == 0:  # X состоит только из 0 и 1\n",
     "                        continue\n",
     "                    prob_w_given_c = (self.feat_counts[c][column_idx] + 1) / (\n",
-    "                          X.shape[0])  # вероятности считаем как частоты появлений соотв. 1 в признаках\n",
+    "                            2 * X.shape[0])  # вероятности считаем как частоты появлений соотв. 1 в признаках\n",
     "                    class_scores[c] *= prob_w_given_c\n",
     "            result.append(max(class_scores,\n",
     "                              key=class_scores.get))  # добавляем в возвращаемый массив метку класса с наибольшей вероятностью\n",
@@ -119,7 +115,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "С помощью Label Encoder кодируем строки числами"
+    "## С помощью Label Encoder кодируем строки числами"
    ]
   },
   {
@@ -146,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Для определения самого информативного признака создаем список датафреймов"
+    "## Для определения самого информативного признака создаем список датафреймов"
    ]
   },
   {
@@ -190,7 +186,7 @@
     "for df in df_list:\n",
     "    label_encoder = LE()\n",
     "    df.iloc[:, 0] = label_encoder.fit_transform(df.iloc[:, 0])\n",
-    "    train_data, test_data = train_test_split(df, test_size=0.3,random_state=42)\n",
+    "    train_data, test_data = train_test_split(df, test_size=0.3, random_state=42)\n",
     "\n",
     "    y_train = train_data['class']\n",
     "    y_test = test_data['class']\n",
@@ -308,18 +304,17 @@
     }
    ],
    "source": [
-    "# mushrooms_df.groupby('class').hist(figsize=(15,15))\n",
     "l = False\n",
-    "for col in mushrooms_df.drop('class',axis=1).columns:\n",
-    "    plt.figure(figsize=(12, 6)) \n",
+    "for col in mushrooms_df.drop('class', axis=1).columns:\n",
+    "    plt.figure(figsize=(12, 6))\n",
     "    for cl in mushrooms_df['class'].unique():\n",
-    "        plt.subplot(1,2, int(l) + 1)\n",
+    "        plt.subplot(1, 2, int(l) + 1)\n",
     "        n_unique = len(mushrooms_df[mushrooms_df['class'] == cl][col].unique())\n",
     "        plt.hist(mushrooms_df[mushrooms_df['class'] == cl][col])\n",
     "        plt.xlabel(col)\n",
     "        plt.legend(cl)\n",
     "        print(n_unique)\n",
-    "        l =  not l\n",
+    "        l = not l\n",
     "    plt.show()"
    ]
   },
